# c8hardcaml

./: README.md  c8.opam  dune-project
c8asm/: Cargo.toml  README.md
c8asm/examples/: call_draw_zero.asm  call_draw_zero_never_ret.asm  call_draw_zero_then_clear_screen.asm  clear_and_draw.asm  clear_and_draw_top_left_to_bottom_right.asm  clear_and_draw_with_loop.asm  draw_zero.asm  triple_call.asm
c8asm/src/: main.rs
src/: bcd.ml  bcd.mli  c8.ml  counter.ml  cpu_core.ml  cpu_core.mli  draw.ml  draw.mli  dune  execute_core.ml  execute_core.mli  executor.ml  fetch.ml  fetch.mli  global.ml  global.mli  immediate_register.ml  immediate_register.mli  keys.ml  machine.ml  main_memory.ml  main_memory.mli  memory.ml  memset.ml  memset.mli  programmable_cpu_core.ml  programmable_cpu_core.mli  ram.ml  registers.ml  registers.mli  target_register.ml  target_register.mli  xor_shift.ml  xor_shift.mli
test/: drawille.ml  dune  helper.ml  instruction_test.ml  rom_test.ml  test_instruction.ml  test_rom.ml  test_rom2.ml  test_rom3.ml  test_synthetic.ml
